root-app/apps/web-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: apps
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        worker.gardener.cloud/pool: np-ske
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
