root-app/apps/web-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: large-dev-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.ldevice.servicedesk.tvwebservices.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
  - host: web-app.ldevice.servicedesk.tvwebservices.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.ldevice.servicedesk.tvwebservices.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
  tls:
  - hosts:
    - argocd.ldevice.servicedesk.tvwebservices.org
    - web-app.ldevice.servicedesk.tvwebservices.org
    - api.ldevice.servicedesk.tvwebservices.org
    secretName: letsencrypt
